# halo2-native-ecc

./: Cargo.toml
src/: ec_gates.rs
src/ec_gates/: test_dleq.rs
